fixed z-index problem

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ article h2 { font-family: 'Signika'; font-size: 60px; margin: 25px 0; line-heigh
 /* Background Only */
 #second .photograph { background: url(../images/gear-bg.png) transparent 40% 100px no-repeat fixed; min-height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; }
 #second { padding: 50px 0;}
-#second article { margin-top:-800px; background: url(../images/grain.png) repeat #333; color: #fff; width: 445px; margin-left: 100px; padding: 10px 20px; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1.5em; box-shadow: 0 0 25px rgba(0,0,0,0.3); border: 1px solid rgba(150,150,150,0.1); }
+#second article { position: relative; z-index:5;margin-top:-800px; background: url(../images/grain.png) repeat #333; color: #fff; width: 445px; margin-left: 100px; padding: 10px 20px; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1.5em; box-shadow: 0 0 25px rgba(0,0,0,0.3); border: 1px solid rgba(150,150,150,0.1); }
 #second article p { margin-bottom: 25px; }
 #second article a { color: #ff0;}
 
@@ -42,17 +42,13 @@ article h2 { font-family: 'Signika'; font-size: 60px; margin: 25px 0; line-heigh
 #third article p { width: 300px; margin-bottom: 25px; }
 
 /* HTML5 Video */
-#fourth article { background: url(../images/grain.png) repeat #333; color: #fff; width: 445px; margin-top:-900px; margin-left: 100px; padding: 10px 20px; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1.5em; box-shadow: 0 0 25px rgba(0,0,0,0.3); border: 1px solid rgba(150,150,150,0.1); }
-
-//#fourth article {  margin-left: 10%; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1.5em; color: #fff; position: absolute; top: 0; }
+#fourth article { position:relative; z-index:5; background: url(../images/grain.png) repeat #333; color: #fff; width: 445px; margin-top:-900px; margin-left: 100px; padding: 10px 20px; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1.5em; box-shadow: 0 0 25px rgba(0,0,0,0.3); border: 1px solid rgba(150,150,150,0.1); }
 #fourth article p { width: 300px; margin: 50px 0; }
-#fourth .photograph { background: url(../images/gear2-bg.png) transparent 40% 100px no-repeat fixed; min-height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; }
-
-//#fourth video { position: fixed; left: 50%; box-shadow: 0 0 25px rgba(0,0,0,0.7); z-index: 1;}
+#fourth .photograph { background: url(../images/gear2-bg.png) transparent 40% 100px no-repeat fixed; min-height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; z-index:0; margin: 0 auto; }
 
 /* The End */
-#theend .byebye { background: url(../images/od-logo.png) 40% 100px no-repeat fixed; height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; }
-#theend article {  color: #fff; width: 445px; margin-left: 100px; padding: 10px 20px; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1em; margin: -1000px auto;}
+#theend .byebye { background: url(../images/od-logo.png) 40% 100px no-repeat fixed; height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; z-index:0;}
+#theend article { position:relative; z-index:5; color: #fff; width: 445px; margin-left: 100px; padding: 10px 20px; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1em; margin: -1000px auto;}
 #theend article p { text-align:center; width: 300px; margin: 10px 0;}
 
 /* Custom steez */
